NetBSD Problem Report #51159
From martin@duskware.de Sun May 22 18:50:02 2016
Return-Path: <martin@duskware.de>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
by mollari.NetBSD.org (Postfix) with ESMTPS id 2EC3A7A3DB
for <gnats-bugs@gnats.NetBSD.org>; Sun, 22 May 2016 18:50:02 +0000 (UTC)
From: martin@NetBSD.org
Reply-To: martin@NetBSD.org
To: gnats-bugs@NetBSD.org
Subject: evbarm is untestable
X-Send-Pr-Version: 3.95
>Number: 51159
>Category: toolchain
>Synopsis: evbarm is untestable
>Confidential: no
>Severity: critical
>Priority: high
>Responsible: toolchain-manager
>State: closed
>Class: sw-bug
>Submitter-Id: net
>Arrival-Date: Sun May 22 18:55:00 +0000 2016
>Closed-Date: Sun May 22 21:17:15 +0000 2016
>Last-Modified: Sun May 22 21:17:15 +0000 2016
>Originator: Martin Husemann
>Release: NetBSD 7.99.29
>Organization:
The NetBSD Foundation, Inc
>Environment:
System: NetBSD space-truckin.duskware.de 7.99.29 NetBSD 7.99.29 (CUBIETRUCK) #260: Sun May 22 15:17:59 CEST 2016 martin@night-owl.duskware.de:/usr/src/sys/arch/evbarm/compile/CUBIETRUCK evbarm
Architecture: earmv7hfeb
Machine: evbarm
>Description:
Trying to run tests on -current evbarm fails:
Tests root: /usr/tests
bin/cat/t_cat (1/645): 2 test cases
align: [1] Segmentation fault (core dumped) atf-run |
>How-To-Repeat:
cd /usr/tests && atf-run|atf-report
>Fix:
n/a
>Release-Note:
>Audit-Trail:
From: "Joerg Sonnenberger" <joerg@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/51159 CVS commit: src/libexec/ld.elf_so
Date: Sun, 22 May 2016 19:28:39 +0000
Module Name: src
Committed By: joerg
Date: Sun May 22 19:28:39 UTC 2016
Modified Files:
src/libexec/ld.elf_so: headers.c
Log Message:
obj->phdr must be the absolute address, not the virtual offset from the
main binary. Historically, this has been the same. For PIE though,
relocbase can be pretty much anywhere. Fixes PR toolchain/51159.
To generate a diff of this commit:
cvs rdiff -u -r1.59 -r1.60 src/libexec/ld.elf_so/headers.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
State-Changed-From-To: open->closed
State-Changed-By: martin@NetBSD.org
State-Changed-When: Sun, 22 May 2016 21:17:15 +0000
State-Changed-Why:
Confirmed fixed
>Unformatted:
(Contact us)
$NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014
The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.