obj->phdr must be the absolute address, not the virtual offset from the main binary. Historically, this has been the same. For PIE though, relocbase can be pretty much anywhere. Fixes PR toolchain/51159.